--- a/index.html
+++ b/index.html
@@ -1,43 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.12.0/css/all.css"
-      i
-      ntegrity="sha384-REHJTs1r2ErKBuJB0fCK99gCYsVjwxHrSU0N7I1zl9vZbggVJXRMsv/sLlOAGb4M"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css" i ntegrity="sha384-REHJTs1r2ErKBuJB0fCK99gCYsVjwxHrSU0N7I1zl9vZbggVJXRMsv/sLlOAGb4M" crossorigin="anonymous" />
     <link rel="stylesheet" href="styles.css" />
 
     <title>Document</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <form>
-      <div class="field-name">
-        <i class="far fa-user"></i>
-        <input type="text" placeholder="User name" required />
-        <i class="fas fa-arrow-down"></i>
-      </div>
-    
-      <div class="field-email inactive">
-        <i class="far fa-paper-plane"></i>
-        <input type="email" placeholder="Email" required />
-        <i class="fas fa-arrow-down"></i>
-      </div>
+        <div class="field-name">
+            <i class="far fa-user"></i>
+            <input type="text" placeholder="지율이에게 가장 하고 싶은 말은?" required />
+            <i class="fas fa-arrow-down"></i>
+        </div>
+
+        <div class="field-email inactive">
+            <p>나도</p>
+        </div>
+        <!--
       <div class="field-password inactive">
         <i class="fas fa-unlock-alt"></i>
         <input type="password" placeholder="Password" required />
         <i class="fas fa-arrow-down"></i>
       </div>
+      
+
       <div class="field-finish inactive">
         <i class="far fa-heart"></i>
-        <p>Thank you</p>
+        <p>나도</p>
         <i class="far fa-heart"></i>
       </div>
-    <script src="me.js"></script>
-  </body>
+      -->
+        <script src="js.js"></script>
+</body>
+
 </html>
